# bolt

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
examples/: array_basic.rs  array_iter.rs  assoc_type_basic.rs  borrow_errors.rs  borrow_test.rs  borrowck_test.rs  bounds_test.rs  chain_test.rs  closure_basic.rs  collections_test.rs  const_static.rs  control_flow.rs  counter_two_calls.rs  debug_nested.rs  debug_new.rs  derive_clone.rs  div_test.rs  div_test2.rs  dyn_trait.rs  dyn_trait_simple.rs  extern_test.rs  field_access.rs  float_basic.rs  generic_basic.rs  generic_function.rs  generic_method.rs  generic_nested.rs  generic_pair.rs  hashmap_basic.rs  impl_trait.rs  index_test.rs  inline_call.rs  iter_basic.rs  just_get.rs  just_print.rs  let_mut_test.rs  lifetime_basic.rs  macro_basic.rs  macro_simple.rs  match_enum.rs  (+68 more)
examples/multifile/: helper.rs  main.rs
src/: error.rs  hir.rs  lib.rs  main.rs
src/borrowck/: async_checker.rs  ledger.rs  mod.rs  nll.rs
src/cache/: mod.rs
src/cargo/: mod.rs
src/cli/: mod.rs
src/codegen/: mod.rs
src/extern_crates/: mod.rs  rlib.rs  stubs.rs
src/lexer/: mod.rs  token.rs
src/parser/: lower.rs  mod.rs
src/parser2/: ast.rs  lower.rs  mod.rs
src/runtime/: mod.rs
src/ty/: mod.rs
src/typeck/: mod.rs
test/: arrays.rs  assign.rs  bench.rs  benchmark.rs  borrow_error.rs  call.rs  cargo_compare.rs  closures.rs  closures2.rs  derive_test.rs  enums.rs  enums2.rs  enums3.rs  float_test.rs  for_loop.rs  for_simple.rs  generics.rs  generics2.rs  if_let.rs  if_let2.rs  loops.rs  match.rs  method_call.rs  methods.rs  methods2.rs  methods3.rs  methods4.rs  module_test.rs  multi_struct.rs  nested_module.rs  range_only.rs  refs.rs  refs2.rs  refs3.rs  result_test.rs  return_type.rs  rustc_fib.rs  simple.rs  simple_struct.rs  simple_while.rs  (+8 more)
test_cargo/: Cargo.toml
tests/: integration.rs
