[package]
name = "bolt"
version = "0.1.0"
edition = "2021"
description = "Lightning-fast Rust compiler for development"
license = "MIT"
repository = "https://github.com/varun29ankuS/bolt"

[dependencies]
# Parsing
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"

# Code generation
cranelift = "0.111"
cranelift-module = "0.111"
cranelift-jit = "0.111"
cranelift-native = "0.111"
target-lexicon = "0.12"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Utils
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.10"  # Parallelism
dashmap = "6.0"  # Concurrent hashmap
parking_lot = "0.12"
indexmap = "2.0"
once_cell = "1.19"  # Lazy statics

# Caching
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"  # Fast hashing
dirs = "5.0"  # Cache directories

# File watching for concurrent compilation
notify = "6.1"
notify-debouncer-mini = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1  # Faster dev builds for ourselves
