[package]
name = "bolt-rs"
version = "0.1.0"
edition = "2021"
description = "Lightning-fast Rust type checker - get instant feedback 10-100x faster than cargo check"
license = "MIT"
repository = "https://github.com/varun29ankuS/bolt"
homepage = "https://github.com/varun29ankuS/bolt"
documentation = "https://github.com/varun29ankuS/bolt#readme"
readme = "README.md"
keywords = ["rust", "type-checker", "compiler", "development", "fast"]
categories = ["development-tools", "command-line-utilities"]
authors = ["Varun Sharma"]
autoexamples = false  # examples/ contains Bolt source, not Rust examples

[[bin]]
name = "bolt"
path = "src/main.rs"

[dependencies]
# Parsing
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
rustc_lexer = "0.1"  # Official Rust tokenizer (zero deps)
chumsky = "0.9"      # Parser combinator with error recovery (https://github.com/zesterer/chumsky)
ariadne = "0.4"      # Beautiful error reporting (pairs with chumsky)

# Code generation
cranelift = "0.111"
cranelift-module = "0.111"
cranelift-jit = "0.111"
cranelift-native = "0.111"
target-lexicon = "0.12"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Utils
thiserror = "1.0"
anyhow = "1.0"
rayon = "1.10"  # Parallelism
dashmap = "6.0"  # Concurrent hashmap
parking_lot = "0.12"
indexmap = "2.0"
once_cell = "1.19"  # Lazy statics

# Caching
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"  # Cargo.toml parsing
cargo_metadata = "0.18"  # Full cargo integration
blake3 = "1.5"  # Fast hashing
dirs = "5.0"  # Cache directories

# File watching for concurrent compilation
notify = "6.1"
notify-debouncer-mini = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1  # Faster dev builds for ourselves
